# brain-network-classification

./: .gitignore  Data-collection-test.ipynb  Data-collection.ipynb  README.md  cadena.py  classification.py  cs.py  cs_classification.py  cs_transformer.py  de_transformer.py  deleteme.ipynb  densdp.py  dense_subgraph.py  discriminative_edge_classification.py  experiments.ipynb  extreme_edge_classification.py  grid_search_cv.ipynb  iidaka_transformer.py  important_edges.ipynb  k_clique_classification.py  lanciano.py  main.tex  nested_cv.py  oqc_sdp.py  percentile_alphas.ipynb  pipeline.py  pipelines.ipynb  pyproject.toml  references.bib  refs.bib  replication.ipynb  test-qp.ipynb  test.py  test_local_search_omission.py  triangle_classification.py  utils.py
ABIDE/: .gitignore  download_files.ipynb
archive/: README.txt  classification.py  decision_tree.ipynb  discriminative_edge_classification.py  k_clique_classification.py  replication.ipynb
data/ABIDE/: unique.json
data/BrainNetViewer/: DE_important_ASD_edges.edge  DE_important_TD_edges.edge
data/lanciano_datasets_corr_thresh_80/: unique.json
draft/Tengkai Yu/: Function re-write.ipynb  helpers.py  new_cs.py  new_densdp.py  new_greedy_oqc.py  new_oqc_sdp.py  readme
experiments/: matlab_sdp.npy  python_sdp.npy
experiments/ExperimentsRound1/: round-1-results-by-method.xlsx
report/: graph_embeddings.tex  main.tex  paperReview.md  refs.bib
scripts/: calculate_unique_subjects.py  download_abide_files.ipynb  pearson_correlation.ipynb  process_abide_files.ipynb  timeseries_to_networks.ipynb  txt_to_csv.py
(+6568 files in other folders)
