[tool.poetry]
name = "brain-network-classification"
version = "0.1.0"
description = "A project for classifying brain networks with explainable techniques."
authors = ["Keanelek Enns <keanelekenns@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
cvxpy = "^1.2.1"
cvxopt = "^1.3.0"
matplotlib = "^3.5.2"
sklearn = "^0.0"
scikit-optimize = "^0.9.0"
ipykernel = "^6.15.3"
pandas = "^1.5.0"
seaborn = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
